src/http/http_server_parse.cpp

#line 1 "src/http/http_server_parse.rl"
#include <stdio.h>
#include <stdlib.h>
#include <ctype.h>
#include <string.h>

#include "Assert.h"
#include "http_server_parse.h"

namespace bifang
{

namespace http
{

SystemLogger();

#define LEN(AT, FPC) (FPC - buffer - parser->AT)
#define MARK(M, FPC) (parser->M = (FPC) - buffer)
#define PTR_TO(F) (buffer + parser->F)

/** Machine **/

#line 230 "src/http/http_server_parse.rl"


/** Data **/

#line 31 "src/http/http_server_parse.cpp"
static const int http_server_parser_start = 1;
static const int http_server_parser_first_final = 348;
static const int http_server_parser_error = 0;

static const int http_server_parser_en_main = 1;


#line 234 "src/http/http_server_parse.rl"

void http_server_parser_init(http_server_parser* parser)
{
    int cs = 0;

    
#line 46 "src/http/http_server_parse.cpp"
	{
	cs = http_server_parser_start;
	}

#line 240 "src/http/http_server_parse.rl"

    parser->cs = cs;
    parser->content_start = 0;
    parser->content_len = 0;
    parser->mark = 0;
    parser->nread = 0;
    parser->field_len = 0;
    parser->field_start = 0;
    parser->xml_sent = 0;
    parser->json_sent = 0;
}

size_t http_server_parser_execute(http_server_parser* parser, const char* buffer, size_t len, size_t off)  
{
    if (len == 0) return 0;
    parser->nread = 0;

    const char *p, *pe;
    int cs = parser->cs;

    ASSERT_MSG(off <= len, "offset past end of buffer");

    p = buffer + off;
    pe = buffer + len;

    ASSERT_MSG(pe - p == (int)len - (int)off, "pointers aren't same distance");

    
#line 80 "src/http/http_server_parse.cpp"
	{
	short _widec;
	if ( p == pe )
		goto _test_eof;
	switch ( cs )
	{
case 1:
	switch( (*p) ) {
		case 60: goto tr2;
		case 64: goto tr3;
	}
	if ( (*p) > 57 ) {
		if ( 65 <= (*p) && (*p) <= 90 )
			goto tr0;
	} else if ( (*p) >= 48 )
		goto tr0;
	goto st0;
st0:
cs = 0;
	goto _out;
tr0:
#line 25 "src/http/http_server_parse.rl"
	{ MARK(mark, p); }
	goto st2;
st2:
	if ( ++p == pe )
		goto _test_eof2;
case 2:
#line 109 "src/http/http_server_parse.cpp"
	if ( (*p) == 32 )
		goto tr4;
	if ( (*p) > 57 ) {
		if ( 65 <= (*p) && (*p) <= 90 )
			goto st175;
	} else if ( (*p) >= 48 )
		goto st175;
	goto st0;
tr4:
#line 39 "src/http/http_server_parse.rl"
	{ 
        if (parser->request_method != NULL) 
            parser->request_method(parser->data, PTR_TO(mark), LEN(mark, p));
    }
	goto st3;
st3:
	if ( ++p == pe )
		goto _test_eof3;
case 3:
#line 129 "src/http/http_server_parse.cpp"
	_widec = (*p);
	if ( (*p) < 123 ) {
		if ( 94 <= (*p) && (*p) <= 94 ) {
			_widec = (short)(128 + ((*p) - -128));
			if ( 
#line 103 "src/http/http_server_parse.rl"
 parser->uri_relaxed  ) _widec += 256;
		}
	} else if ( (*p) > 123 ) {
		if ( 125 <= (*p) && (*p) <= 125 ) {
			_widec = (short)(128 + ((*p) - -128));
			if ( 
#line 103 "src/http/http_server_parse.rl"
 parser->uri_relaxed  ) _widec += 256;
		}
	} else {
		_widec = (short)(128 + ((*p) - -128));
		if ( 
#line 103 "src/http/http_server_parse.rl"
 parser->uri_relaxed  ) _widec += 256;
	}
	switch( _widec ) {
		case 32: goto tr6;
		case 33: goto tr7;
		case 35: goto tr8;
		case 37: goto tr9;
		case 47: goto tr10;
		case 59: goto tr7;
		case 61: goto tr7;
		case 63: goto tr11;
		case 64: goto tr7;
		case 95: goto tr7;
		case 126: goto tr7;
		case 606: goto tr7;
		case 635: goto tr7;
		case 637: goto tr7;
	}
	if ( _widec < 65 ) {
		if ( 36 <= _widec && _widec <= 57 )
			goto tr7;
	} else if ( _widec > 90 ) {
		if ( 97 <= _widec && _widec <= 122 )
			goto tr12;
	} else
		goto tr12;
	goto st0;
tr6:
#line 25 "src/http/http_server_parse.rl"
	{ MARK(mark, p); }
#line 70 "src/http/http_server_parse.rl"
	{
        if(parser->request_path != NULL)
            parser->request_path(parser->data, PTR_TO(mark), LEN(mark,p));
    }
#line 45 "src/http/http_server_parse.rl"
	{ 
        if (parser->request_uri != NULL)
            parser->request_uri(parser->data, PTR_TO(mark), LEN(mark, p));
    }
	goto st4;
tr37:
#line 70 "src/http/http_server_parse.rl"
	{
        if(parser->request_path != NULL)
            parser->request_path(parser->data, PTR_TO(mark), LEN(mark,p));
    }
#line 45 "src/http/http_server_parse.rl"
	{ 
        if (parser->request_uri != NULL)
            parser->request_uri(parser->data, PTR_TO(mark), LEN(mark, p));
    }
	goto st4;
tr44:
#line 25 "src/http/http_server_parse.rl"
	{ MARK(mark, p); }
#line 51 "src/http/http_server_parse.rl"
	{
        if (parser->fragment != NULL)
            parser->fragment(parser->data, PTR_TO(mark), LEN(mark, p));
    }
	goto st4;
tr47:
#line 51 "src/http/http_server_parse.rl"
	{
        if (parser->fragment != NULL)
            parser->fragment(parser->data, PTR_TO(mark), LEN(mark, p));
    }
	goto st4;
tr54:
#line 56 "src/http/http_server_parse.rl"
	{ MARK(query_start, p); }
#line 58 "src/http/http_server_parse.rl"
	{ 
        if(parser->query_string != NULL)
            parser->query_string(parser->data, PTR_TO(query_start), LEN(query_start, p));
    }
#line 45 "src/http/http_server_parse.rl"
	{ 
        if (parser->request_uri != NULL)
            parser->request_uri(parser->data, PTR_TO(mark), LEN(mark, p));
    }
	goto st4;
tr58:
#line 58 "src/http/http_server_parse.rl"
	{ 
        if(parser->query_string != NULL)
            parser->query_string(parser->data, PTR_TO(query_start), LEN(query_start, p));
    }
#line 45 "src/http/http_server_parse.rl"
	{ 
        if (parser->request_uri != NULL)
            parser->request_uri(parser->data, PTR_TO(mark), LEN(mark, p));
    }
	goto st4;
st4:
	if ( ++p == pe )
		goto _test_eof4;
case 4:
#line 248 "src/http/http_server_parse.cpp"
	if ( (*p) == 72 )
		goto tr13;
	goto st0;
tr13:
#line 25 "src/http/http_server_parse.rl"
	{ MARK(mark, p); }
	goto st5;
st5:
	if ( ++p == pe )
		goto _test_eof5;
case 5:
#line 260 "src/http/http_server_parse.cpp"
	if ( (*p) == 84 )
		goto st6;
	goto st0;
st6:
	if ( ++p == pe )
		goto _test_eof6;
case 6:
	if ( (*p) == 84 )
		goto st7;
	goto st0;
st7:
	if ( ++p == pe )
		goto _test_eof7;
case 7:
	if ( (*p) == 80 )
		goto st8;
	goto st0;
st8:
	if ( ++p == pe )
		goto _test_eof8;
case 8:
	if ( (*p) == 47 )
		goto st9;
	goto st0;
st9:
	if ( ++p == pe )
		goto _test_eof9;
case 9:
	if ( (*p) == 49 )
		goto st10;
	goto st0;
st10:
	if ( ++p == pe )
		goto _test_eof10;
case 10:
	if ( (*p) == 46 )
		goto st11;
	goto st0;
st11:
	if ( ++p == pe )
		goto _test_eof11;
case 11:
	if ( 48 <= (*p) && (*p) <= 49 )
		goto st12;
	goto st0;
st12:
	if ( ++p == pe )
		goto _test_eof12;
case 12:
	switch( (*p) ) {
		case 10: goto tr21;
		case 13: goto tr22;
	}
	goto st0;
tr21:
#line 64 "src/http/http_server_parse.rl"
	{
        if(parser->http_version != NULL)
            parser->http_version(parser->data, PTR_TO(mark), LEN(mark, p));
    }
	goto st13;
tr30:
#line 31 "src/http/http_server_parse.rl"
	{ MARK(mark, p); }
#line 33 "src/http/http_server_parse.rl"
	{
        if (parser->http_field != NULL)
            parser->http_field(parser->data, PTR_TO(field_start), parser->field_len, PTR_TO(mark), LEN(mark, p));
    }
	goto st13;
tr33:
#line 33 "src/http/http_server_parse.rl"
	{
        if (parser->http_field != NULL)
            parser->http_field(parser->data, PTR_TO(field_start), parser->field_len, PTR_TO(mark), LEN(mark, p));
    }
	goto st13;
st13:
	if ( ++p == pe )
		goto _test_eof13;
case 13:
#line 342 "src/http/http_server_parse.cpp"
	switch( (*p) ) {
		case 10: goto tr24;
		case 13: goto tr25;
		case 33: goto tr23;
		case 124: goto tr23;
		case 126: goto tr23;
	}
	if ( (*p) < 42 ) {
		if ( (*p) < 11 ) {
			if ( 1 <= (*p) && (*p) <= 8 )
				goto tr23;
		} else if ( (*p) > 31 ) {
			if ( 35 <= (*p) && (*p) <= 39 )
				goto tr23;
		} else
			goto tr23;
	} else if ( (*p) > 43 ) {
		if ( (*p) < 48 ) {
			if ( 45 <= (*p) && (*p) <= 46 )
				goto tr23;
		} else if ( (*p) > 57 ) {
			if ( (*p) > 90 ) {
				if ( 94 <= (*p) && (*p) <= 122 )
					goto tr23;
			} else if ( (*p) >= 65 )
				goto tr23;
		} else
			goto tr23;
	} else
		goto tr23;
	goto st0;
tr23:
#line 28 "src/http/http_server_parse.rl"
	{ MARK(field_start, p); }
	goto st14;
st14:
	if ( ++p == pe )
		goto _test_eof14;
case 14:
#line 382 "src/http/http_server_parse.cpp"
	switch( (*p) ) {
		case 33: goto st14;
		case 58: goto tr27;
		case 124: goto st14;
		case 126: goto st14;
	}
	if ( (*p) < 42 ) {
		if ( (*p) < 10 ) {
			if ( 1 <= (*p) && (*p) <= 8 )
				goto st14;
		} else if ( (*p) > 31 ) {
			if ( 35 <= (*p) && (*p) <= 39 )
				goto st14;
		} else
			goto st14;
	} else if ( (*p) > 43 ) {
		if ( (*p) < 48 ) {
			if ( 45 <= (*p) && (*p) <= 46 )
				goto st14;
		} else if ( (*p) > 57 ) {
			if ( (*p) > 90 ) {
				if ( 94 <= (*p) && (*p) <= 122 )
					goto st14;
			} else if ( (*p) >= 65 )
				goto st14;
		} else
			goto st14;
	} else
		goto st14;
	goto st0;
tr27:
#line 29 "src/http/http_server_parse.rl"
	{ parser->field_len = LEN(field_start, p); }
	goto st15;
tr29:
#line 31 "src/http/http_server_parse.rl"
	{ MARK(mark, p); }
	goto st15;
st15:
	if ( ++p == pe )
		goto _test_eof15;
case 15:
#line 425 "src/http/http_server_parse.cpp"
	switch( (*p) ) {
		case 0: goto st0;
		case 9: goto tr29;
		case 10: goto tr30;
		case 13: goto tr31;
		case 32: goto tr29;
		case 127: goto st0;
	}
	goto tr28;
tr28:
#line 31 "src/http/http_server_parse.rl"
	{ MARK(mark, p); }
	goto st16;
st16:
	if ( ++p == pe )
		goto _test_eof16;
case 16:
#line 443 "src/http/http_server_parse.cpp"
	switch( (*p) ) {
		case 0: goto st0;
		case 10: goto tr33;
		case 13: goto tr34;
		case 127: goto st0;
	}
	goto st16;
tr22:
#line 64 "src/http/http_server_parse.rl"
	{
        if(parser->http_version != NULL)
            parser->http_version(parser->data, PTR_TO(mark), LEN(mark, p));
    }
	goto st17;
tr31:
#line 31 "src/http/http_server_parse.rl"
	{ MARK(mark, p); }
#line 33 "src/http/http_server_parse.rl"
	{
        if (parser->http_field != NULL)
            parser->http_field(parser->data, PTR_TO(field_start), parser->field_len, PTR_TO(mark), LEN(mark, p));
    }
	goto st17;
tr34:
#line 33 "src/http/http_server_parse.rl"
	{
        if (parser->http_field != NULL)
            parser->http_field(parser->data, PTR_TO(field_start), parser->field_len, PTR_TO(mark), LEN(mark, p));
    }
	goto st17;
st17:
	if ( ++p == pe )
		goto _test_eof17;
case 17:
#line 478 "src/http/http_server_parse.cpp"
	if ( (*p) == 10 )
		goto st13;
	goto st0;
tr24:
#line 28 "src/http/http_server_parse.rl"
	{ MARK(field_start, p); }
#line 76 "src/http/http_server_parse.rl"
	{
        if(parser->xml_sent || parser->json_sent)
        {
            parser->content_start = PTR_TO(mark) - buffer;
            // +1 includes the \0
            parser->content_len = p - buffer - parser->content_start + 1;
        }
        else
        {
            parser->content_start = p - buffer + 1;

            if(parser->header_done != NULL)
                parser->header_done(parser->data, p + 1, pe - p - 1);
        }
        {p++; cs = 348; goto _out;}
    }
	goto st348;
tr36:
#line 76 "src/http/http_server_parse.rl"
	{
        if(parser->xml_sent || parser->json_sent)
        {
            parser->content_start = PTR_TO(mark) - buffer;
            // +1 includes the \0
            parser->content_len = p - buffer - parser->content_start + 1;
        }
        else
        {
            parser->content_start = p - buffer + 1;

            if(parser->header_done != NULL)
                parser->header_done(parser->data, p + 1, pe - p - 1);
        }
        {p++; cs = 348; goto _out;}
    }
	goto st348;
st348:
	if ( ++p == pe )
		goto _test_eof348;
case 348:
#line 526 "src/http/http_server_parse.cpp"
	switch( (*p) ) {
		case 33: goto st14;
		case 58: goto tr27;
		case 124: goto st14;
		case 126: goto st14;
	}
	if ( (*p) < 42 ) {
		if ( (*p) < 10 ) {
			if ( 1 <= (*p) && (*p) <= 8 )
				goto st14;
		} else if ( (*p) > 31 ) {
			if ( 35 <= (*p) && (*p) <= 39 )
				goto st14;
		} else
			goto st14;
	} else if ( (*p) > 43 ) {
		if ( (*p) < 48 ) {
			if ( 45 <= (*p) && (*p) <= 46 )
				goto st14;
		} else if ( (*p) > 57 ) {
			if ( (*p) > 90 ) {
				if ( 94 <= (*p) && (*p) <= 122 )
					goto st14;
			} else if ( (*p) >= 65 )
				goto st14;
		} else
			goto st14;
	} else
		goto st14;
	goto st0;
tr25:
#line 28 "src/http/http_server_parse.rl"
	{ MARK(field_start, p); }
	goto st18;
st18:
	if ( ++p == pe )
		goto _test_eof18;
case 18:
#line 565 "src/http/http_server_parse.cpp"
	switch( (*p) ) {
		case 10: goto tr36;
		case 33: goto st14;
		case 58: goto tr27;
		case 124: goto st14;
		case 126: goto st14;
	}
	if ( (*p) < 42 ) {
		if ( (*p) < 11 ) {
			if ( 1 <= (*p) && (*p) <= 8 )
				goto st14;
		} else if ( (*p) > 31 ) {
			if ( 35 <= (*p) && (*p) <= 39 )
				goto st14;
		} else
			goto st14;
	} else if ( (*p) > 43 ) {
		if ( (*p) < 48 ) {
			if ( 45 <= (*p) && (*p) <= 46 )
				goto st14;
		} else if ( (*p) > 57 ) {
			if ( (*p) > 90 ) {
				if ( 94 <= (*p) && (*p) <= 122 )
					goto st14;
			} else if ( (*p) >= 65 )
				goto st14;
		} else
			goto st14;
	} else
		goto st14;
	goto st0;
tr7:
#line 25 "src/http/http_server_parse.rl"
	{ MARK(mark, p); }
	goto st19;
st19:
	if ( ++p == pe )
		goto _test_eof19;
case 19:
#line 605 "src/http/http_server_parse.cpp"
	_widec = (*p);
	if ( (*p) < 123 ) {
		if ( 94 <= (*p) && (*p) <= 94 ) {
			_widec = (short)(128 + ((*p) - -128));
			if ( 
#line 103 "src/http/http_server_parse.rl"
 parser->uri_relaxed  ) _widec += 256;
		}
	} else if ( (*p) > 123 ) {
		if ( 125 <= (*p) && (*p) <= 125 ) {
			_widec = (short)(128 + ((*p) - -128));
			if ( 
#line 103 "src/http/http_server_parse.rl"
 parser->uri_relaxed  ) _widec += 256;
		}
	} else {
		_widec = (short)(128 + ((*p) - -128));
		if ( 
#line 103 "src/http/http_server_parse.rl"
 parser->uri_relaxed  ) _widec += 256;
	}
	switch( _widec ) {
		case 32: goto tr37;
		case 33: goto st19;
		case 35: goto tr39;
		case 37: goto st24;
		case 47: goto st26;
		case 59: goto st19;
		case 61: goto st19;
		case 63: goto tr42;
		case 95: goto st19;
		case 126: goto st19;
		case 606: goto st19;
		case 635: goto st19;
		case 637: goto st19;
	}
	if ( _widec < 64 ) {
		if ( 36 <= _widec && _widec <= 57 )
			goto st19;
	} else if ( _widec > 90 ) {
		if ( 97 <= _widec && _widec <= 122 )
			goto st19;
	} else
		goto st19;
	goto st0;
tr8:
#line 25 "src/http/http_server_parse.rl"
	{ MARK(mark, p); }
#line 70 "src/http/http_server_parse.rl"
	{
        if(parser->request_path != NULL)
            parser->request_path(parser->data, PTR_TO(mark), LEN(mark,p));
    }
#line 45 "src/http/http_server_parse.rl"
	{ 
        if (parser->request_uri != NULL)
            parser->request_uri(parser->data, PTR_TO(mark), LEN(mark, p));
    }
	goto st20;
tr39:
#line 70 "src/http/http_server_parse.rl"
	{
        if(parser->request_path != NULL)
            parser->request_path(parser->data, PTR_TO(mark), LEN(mark,p));
    }
#line 45 "src/http/http_server_parse.rl"
	{ 
        if (parser->request_uri != NULL)
            parser->request_uri(parser->data, PTR_TO(mark), LEN(mark, p));
    }
	goto st20;
tr55:
#line 56 "src/http/http_server_parse.rl"
	{ MARK(query_start, p); }
#line 58 "src/http/http_server_parse.rl"
	{ 
        if(parser->query_string != NULL)
            parser->query_string(parser->data, PTR_TO(query_start), LEN(query_start, p));
    }
#line 45 "src/http/http_server_parse.rl"
	{ 
        if (parser->request_uri != NULL)
            parser->request_uri(parser->data, PTR_TO(mark), LEN(mark, p));
    }
	goto st20;
tr59:
#line 58 "src/http/http_server_parse.rl"
	{ 
        if(parser->query_string != NULL)
            parser->query_string(parser->data, PTR_TO(query_start), LEN(query_start, p));
    }
#line 45 "src/http/http_server_parse.rl"
	{ 
        if (parser->request_uri != NULL)
            parser->request_uri(parser->data, PTR_TO(mark), LEN(mark, p));
    }
	goto st20;
st20:
	if ( ++p == pe )
		goto _test_eof20;
case 20:
#line 707 "src/http/http_server_parse.cpp"
	_widec = (*p);
	if ( (*p) < 123 ) {
		if ( 94 <= (*p) && (*p) <= 94 ) {
			_widec = (short)(128 + ((*p) - -128));
			if ( 
#line 103 "src/http/http_server_parse.rl"
 parser->uri_relaxed  ) _widec += 256;
		}
	} else if ( (*p) > 123 ) {
		if ( 125 <= (*p) && (*p) <= 125 ) {
			_widec = (short)(128 + ((*p) - -128));
			if ( 
#line 103 "src/http/http_server_parse.rl"
 parser->uri_relaxed  ) _widec += 256;
		}
	} else {
		_widec = (short)(128 + ((*p) - -128));
		if ( 
#line 103 "src/http/http_server_parse.rl"
 parser->uri_relaxed  ) _widec += 256;
	}
	switch( _widec ) {
		case 32: goto tr44;
		case 33: goto tr43;
		case 37: goto tr45;
		case 61: goto tr43;
		case 95: goto tr43;
		case 126: goto tr43;
		case 606: goto tr43;
		case 635: goto tr43;
		case 637: goto tr43;
	}
	if ( _widec < 36 ) {
		if ( _widec <= -1 )
			goto tr43;
	} else if ( _widec > 59 ) {
		if ( _widec > 90 ) {
			if ( 97 <= _widec && _widec <= 122 )
				goto tr43;
		} else if ( _widec >= 63 )
			goto tr43;
	} else
		goto tr43;
	goto st0;
tr43:
#line 25 "src/http/http_server_parse.rl"
	{ MARK(mark, p); }
	goto st21;
st21:
	if ( ++p == pe )
		goto _test_eof21;
case 21:
#line 760 "src/http/http_server_parse.cpp"
	_widec = (*p);
	if ( (*p) < 123 ) {
		if ( 94 <= (*p) && (*p) <= 94 ) {
			_widec = (short)(128 + ((*p) - -128));
			if ( 
#line 103 "src/http/http_server_parse.rl"
 parser->uri_relaxed  ) _widec += 256;
		}
	} else if ( (*p) > 123 ) {
		if ( 125 <= (*p) && (*p) <= 125 ) {
			_widec = (short)(128 + ((*p) - -128));
			if ( 
#line 103 "src/http/http_server_parse.rl"
 parser->uri_relaxed  ) _widec += 256;
		}
	} else {
		_widec = (short)(128 + ((*p) - -128));
		if ( 
#line 103 "src/http/http_server_parse.rl"
 parser->uri_relaxed  ) _widec += 256;
	}
	switch( _widec ) {
		case 32: goto tr47;
		case 33: goto st21;
		case 37: goto st22;
		case 61: goto st21;
		case 95: goto st21;
		case 126: goto st21;
		case 606: goto st21;
		case 635: goto st21;
		case 637: goto st21;
	}
	if ( _widec < 36 ) {
		if ( _widec <= -1 )
			goto st21;
	} else if ( _widec > 59 ) {
		if ( _widec > 90 ) {
			if ( 97 <= _widec && _widec <= 122 )
				goto st21;
		} else if ( _widec >= 63 )
			goto st21;
	} else
		goto st21;
	goto st0;
tr45:
#line 25 "src/http/http_server_parse.rl"
	{ MARK(mark, p); }
	goto st22;
st22:
	if ( ++p == pe )
		goto _test_eof22;
case 22:
#line 813 "src/http/http_server_parse.cpp"
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st23;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st23;
	} else
		goto st23;
	goto st0;
st23:
	if ( ++p == pe )
		goto _test_eof23;
case 23:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st21;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st21;
	} else
		goto st21;
	goto st0;
tr9:
#line 25 "src/http/http_server_parse.rl"
	{ MARK(mark, p); }
	goto st24;
st24:
	if ( ++p == pe )
		goto _test_eof24;
case 24:
#line 844 "src/http/http_server_parse.cpp"
